<resources>
    <string name="app_name">qpdex</string>
    <string name="app_name_stylized">QPDex</string>
    <string name="legal_note">All assets property of Nintendo of America, The Pokemon Company and Game Freak 1996-2015</string>

    <!-- IntroActivity String Start-->
    <string name="enter_pokedex">Browse Now</string>
    <string name="enter_trainer">My Trainer</string>
    <string name="enter_gameview">Generations</string>
    <string name="adv_search">Advanced Search</string>
    <string name="resource_button">Pokémon Resources</string>
    <!-- IntroActivity String End-->

    <!-- PokedexActivity String End-->
    <string name="pokedex_init_description">Welcome, Click on any element on the list to start seeing Pokemon!\n
        After choosing one, double click/long click or press on the image for more detailed info</string>
    <!--<string name="pokedex_init_description">Sometimes, on a dark night, your shadow thrown by a streetlight will suddenly and startlingly overtake you. It is actually a Gengar running past you, pretending to be your shadow. </string>-->
    <string name="pokedex_init_title">Click here to search</string>
    <string name="pokedex_placeholder_description">[ENTER POKEDEX ENTRY]</string>
    <string name="pokedex_placeholder_title">[POKEMON NAME]</string>
    <!-- PokedexActivity String End-->


    <!-- DetailedPokemonActivity Strings Start-->
    <string name="attack">Attack</string>
    <string name="defense">Defence</string>
    <string name="hp">HP</string>
    <string name="spattack">Sp. Atk.</string>
    <string name="spdefense">Sp. Def.</string>
    <string name="speed">Speed</string>
    <!-- DetailedPokemonActivity Strings End-->


    <!-- PokemonResources Strings Start-->
    <string name="website_bulbapedia"><![CDATA[<a href="http://bulbapedia.bulbagarden.net">Bulbapedia - The community-driven Pokemon encyclopedia</a>]]></string>
    <string name="website_smogon"><![CDATA[<a href="http://www.smogon.com">Smogon - Competitive Pokemon Community</a>]]></string>
    <string name="website_serebii"><![CDATA[<a href="http://www.serebii.net">Serebii - Where Legends come to Life</a>]]></string>
    <string name="website_pldh"><![CDATA[<a href="http://www.pldh.net">PLDH - Pokemon News</a>]]></string>
    <string name="website_veekun"><![CDATA[<a href="http://www.veekun.com>Veekun - Pokemon Blog</a>]]></string>
    <string name="website_pokemonvideogames"><![CDATA[<a href="http://www.pokemon.com/us/pokemon-video-games/">Please support the Official Release!</a>]]></string>
    <!-- PokemonResources Strings End-->

    <!-- Work in Progress strings-->
    <string name="wip_banner">Pikachu and the Developers are hard at work here!</string>
    <string name="wip_text">Sorry but this isn\'t complete yet!\n We\'re doing our best working day
        and night to bring you an awesome Pokédex you can take with you on your journey to catch them all\n
        But, fear not! We\'re Open-Source!\n
        You can track our progress, ask a question or send a word of encouragement at our project page below:\n
    </string>
    <string name="wip_link">https://github.com/foxtrot94/ECE-Pokedex \n\n</string>
    <!-- -->

    <!-- Exception String -->
    <string name="exception_title">Wild Exception appeared!</string>
    <string name="exception_text">It seems qpdex stopped working because of strange behaviour.\n
        We\'ve included some information about it below, but it be best you let the developers know so they can fix it

    </string>

    <!-- Easter Egg -->
    <!--<string name="ketsuban">けつばん</string>-->

    <!-- CreditsActivity Strings start-->
    <string name="amit">Amit Desai</string>
    <string name="javier">Javier Fajardo</string>
    <string name="nicole">Nicole Cappadocia-Assaly</string>
    <string name="thinesh">Thinesh Thuraisingam</string>
    <string name="credit_bulbapedia"><![CDATA[<a href="http://bulbapedia.bulbagarden.net">Bulbapedia</a>]]></string>
    <string name="credit_smogon"><![CDATA[<a href="http://www.smogon.com">Smogon</a>]]></string>
    <string name="credit_serebii"><![CDATA[<a href="http://www.serebii.net">Serebii</a>]]></string>
    <string name="credit_veekun"><![CDATA[<a href="http://www.veekun.com>Veekun</a>]]></string>
    <string name="credit_amit"><![CDATA[<a href="https://www.github.com/flareflare>Amit</a>]]></string>
    <string name="credit_javier"><![CDATA[<a href="https://www.github.com/foxtrot94>Javier</a>]]></string>
    <string name="credit_nicole"><![CDATA[<a href="https://www.github.com/minicol>Nicole</a>]]></string>
    <string name="credit_thinesh"><![CDATA[<a href="https://www.github.com/thineshth>Thinesh</a>]]></string>
    <!-- CreditsActivity Strings end-->

    <!-- Placeholder -->
    <string name="dex_list_placeholder">[NUM]. [POKEMON]</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pokedex">PokedexActivity</string>
    <string name="title_activity_credits">DevCreds</string>
    <string name="title_activity_detailed_pokemon">DetailedPokemonActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_wip">WIPActivity</string>
    <string name="title_activity_exception_caught">Uncaught Exception Occurred</string>
    <string name="title_activity_pokemon_resources">PokemonResources</string>
</resources>
