<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/menubackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.54"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name_stylized"
            android:id="@+id/textView2"
            android:textSize="48sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center|center_horizontal"
        android:layout_weight="0.40">

        <Button android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_pokedex"
            android:layout_marginBottom="10dp"
            android:background="@color/dex_pink_transparent"
            android:onClick="switchToPokedex" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_trainer"
            android:layout_marginBottom="10dp"
            android:background="@color/dex_green_transparent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_gameview"
            android:layout_marginBottom="10dp"
            android:background="@color/dex_yellow_transparent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adv_search"
            android:layout_marginBottom="10dp"
            android:background="@color/dex_blue_transparent" />

        <Button
            android:id="@+id/button5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/resource_button"
            android:background="@color/dex_grey_transparent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0.16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/legal_note"
            android:id="@+id/textView"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>
